--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,13 +50,26 @@ body {
     border-radius: 5px;
     margin-left: 5%;
     margin-right: 5%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
     background-color: aquamarine;
 }
 
 .play-button {
-    background-color: purple;
-}
-
-.tutorial-button {
-    background-color: aqua;
+    background-color: red;
+    text-align: center;
+    border-radius: 5px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-left: 10px;
+    padding-right: 10px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    font-size: x-large;
+    font-weight: 600;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    color: #f0faff;
+    box-shadow: 10px, 10px, 10px, black;
 }
