--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -135,8 +135,17 @@ body {
     background-color: rgb(59, 59, 59);
     font-size: larger;
     text-align: center;
+    letter-spacing: 1px;
     border-radius: 5px;
     width: 150px;
-    margin-left: 10%;
+    margin-left: 8%;
     margin-top: 5%;
+    box-shadow: 3px 3px 1px rgba(0, 0, 0, 0.9);
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+.catagory-box a {
+    text-decoration: none;
+    color: #f0faff;
 }
