--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -116,23 +116,21 @@ body {
 
 /*catagories page styling*/
 
-.catagories {
+.catagories, .game {
     /*placeholder colour*/
     text-align: left;
     font-size: larger;
     border-radius: 5px;
-    margin-left: 5%;
-    margin-right: 5%;
+    margin-left: auto;
+    margin-right: auto;
     margin-bottom: 20px;
     padding-left: 5px;
     padding-right: 5px;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+    max-width: 400px;
     justify-content: center;
 }
 
-.catagory-box {
+.catagory-box, .game-box {
     background-color: rgb(59, 59, 59);
     font-size: larger;
     text-align: center;
@@ -144,9 +142,15 @@ body {
     box-shadow: 3px 3px 1px rgba(0, 0, 0, 0.9);
     padding-top: 10px;
     padding-bottom: 10px;
+    display: inline-block;
 }
 
 .catagory-box a {
     text-decoration: none;
     color: #f0faff;
+}
+
+.game-box {
+    padding-top: 0;
+    padding-bottom: 0;
 }
