--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -145,6 +145,12 @@ body {
 .catagory-box a {
     text-decoration: none;
     color: #f0faff;
+    font-size: larger;
+}
+
+.game-box {
+    padding-top: 10px;
+    margin-top: 20px;
 }
 
 .game-box {
