--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,8 +16,8 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     background-position: bottom;
-    margin-left: 5%;
-    margin-right: 5%;
+    margin-left: 0;
+    margin-right: 0;
     border-radius: 5px;
     margin-top: 10px;
     padding-bottom: 20px;
@@ -47,6 +47,7 @@ body {
     margin-bottom: 20px;
     margin-top: 0;
     letter-spacing: 2px;
+    min-width: 375px;
 }
 
 .title-area h1 {
@@ -122,6 +123,7 @@ body {
     margin-right: auto;
     min-width: 400px;
     max-width: 400px;
+    padding-left: 25px;
     justify-content: center;
 }
 
@@ -149,11 +151,7 @@ body {
 }
 
 .game-box {
-    padding-top: 10px;
-    margin-top: 20px;
-}
-
-.game-box {
-    padding-top: 0;
-    padding-bottom: 0;
+    padding-top: 15px;
+    margin-top: 15px;
+    padding-bottom: -20px;
 }
