--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -168,3 +168,10 @@ body {
 .correct {
     background-color: green;
 }
+
+.score-area {
+    background-color: rgb(255, 0, 0);
+    border-radius: 5px;
+    z-index: 99;
+
+}
