--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,12 +42,13 @@ body {
     background-color: rgb(59, 59, 59);
     text-align: center;
     border-radius: 5px;
-    margin-left: 5%;
-    margin-right: 5%;
+    margin-left: auto;
+    margin-right: auto;
     margin-bottom: 20px;
     margin-top: 0;
     letter-spacing: 2px;
     min-width: 375px;
+    max-width: 500px;
 }
 
 .title-area h1 {
@@ -170,8 +171,21 @@ body {
 }
 
 .score-area {
-    background-color: rgb(255, 0, 0);
+    background-color: rgb(59, 59, 59);
     border-radius: 5px;
     z-index: 99;
+    letter-spacing: 2px;
+    min-width: 200px;
+    max-width: 200px;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    margin-top: 20px;
 
+}
+
+#score-school {
+    margin-top: -10px;
 }
