--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,6 +27,7 @@ i {
     padding-bottom: 20px;
     padding-top: 5px;
     min-width: 375px;
+    min-height: 600px;
 }
 
 #logo-container {
@@ -67,11 +68,12 @@ i {
     text-align: left;
     font-size: larger;
     border-radius: 5px;
-    margin-left: 5%;
-    margin-right: 5%;
+    margin-left: auto;
+    margin-right: auto;
     margin-bottom: 20px;
     padding-left: 5px;
     padding-right: 5px;
+    max-width: 400px;
 
 }
 
@@ -202,4 +204,30 @@ i {
 #reset {
     background-color: red;
 
+}
+
+@media only screen and (min-width: 600px) {
+    .container {
+        max-width: 900px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
+
+@media only screen and (max-width: 430px) {
+    .game {
+        font-size: large;
+        margin-left: auto;
+        margin-right: auto;
+        justify-content: center;
+        width: 100%;
+        margin-left: 0px;
+    }
+
+    .game-box {
+        padding-top: 15px;
+        margin-top: 15px;
+        padding-bottom: -20px;
+        margin-left: 5px;
+    }
 }
