--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,10 @@ i {
     margin-right: 5px;
 }
 
+p {
+    line-height: 1.5em;
+}
+
 /*container styling*/
 .container {
     background-image: url(../images/french-skyline-darken.jpg);
@@ -150,6 +154,13 @@ i {
     display: inline-block;
     width: 150px;
     height: 30px;
+}
+
+.game-box:hover {
+    cursor: pointer;
+    box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.9);
+    transition-delay: 30ms;
+
 }
 
 
